before menu logo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 <header class="header-main">
 	<nav class="menu">
 		<div class="menu-inner">
-			<div class="menu-title">Riposte</div>
-			<ul class=menu-items>
-				<li class="menu-item">Download</li>
-				<li class="menu-item">About</li>
-				<li class="menu-item">Contact</li>
-			</ul>
+			<div class="menu-wrapper">
+				<div class="menu-title">Riposte</div>
+				<img class="menu-logo" src="../img/logo.png" />
+				<ul class=menu-items>
+					<li class="menu-item">About</li>
+					<li class="menu-item">Contact</li>
+					<li class="menu-item">Team</li>
+					<li class="menu-item">Download</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
+	<div class="logo">
+	</div>
 </header>
+<section class="header-bottom">
+
+</section>
 </body>
 </html>
