--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
-
+	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css"
 </head>
 <body>
 <header class="header-main">
 	<nav class="menu">
 		<div class="menu-inner">
 			<div class="menu-wrapper">
-				<div class="menu-title">Riposte</div>
-				<img class="menu-logo" src="../img/logo.png" />
+				<img class="menu-logo" src="img/logo.png" />
 				<ul class=menu-items>
 					<li class="menu-item">About</li>
 					<li class="menu-item">Contact</li>
@@ -21,11 +20,14 @@
 			</div>
 		</div>
 	</nav>
-	<div class="logo">
-	</div>
 </header>
 <section class="header-bottom">
-
+	<div class="header-bottom-inner">
+		<i class="fa fa-gamepad fa-5x game-icon"> </i>
+		<h2>About Riposte</h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+		</p>
+	</div>
 </section>
 </body>
 </html>
