drunked code commited while still sober enough

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<img class="menu-logo" src="img/logo.png" />
 				<ul class=menu-items>
 					<li class="menu-item">About</li>
+					<li class="menu-item">Updates</li>
 					<li class="menu-item">Contact</li>
 					<li class="menu-item">Team</li>
 					<li class="menu-item">Download</li>
@@ -21,12 +22,36 @@
 		</div>
 	</nav>
 </header>
-<section class="header-bottom">
-	<div class="header-bottom-inner">
+<section class="about">
+	<div class="about-inner">
 		<i class="fa fa-gamepad fa-5x game-icon"> </i>
 		<h2>About Riposte</h2>
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
 		</p>
+	</div>
+</section>
+<section class="updates">
+	<div class="updates-inner">
+		<i class="fa fa-newspaper-o fa-5x game-icon"> </i>
+		<h2>Latest Updates</h2>
+		<div class="update-blocks">
+			<div class="update-block">
+				<h2>Alpha 1.0</h2>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+				</p>
+			</div>
+			<div class="update-block">
+				<h2>Alpha 1.0</h2>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="team">
+	<div class="team-inner">
+		<i class="fa fa-user fa-5x game-icon"> </i>
+		<h2>Our Team</h2>
 	</div>
 </section>
 </body>
