before the team changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		</div>
 	</nav>
 </header>
+<div class="skew-line sk1"></div>
 <section class="about">
 	<div class="about-inner">
 		<i class="fa fa-gamepad fa-5x game-icon"> </i>
@@ -30,19 +31,32 @@
 		</p>
 	</div>
 </section>
+<div class="skew-line sk2"></div>
 <section class="updates">
 	<div class="updates-inner">
 		<i class="fa fa-newspaper-o fa-5x game-icon"> </i>
 		<h2>Latest Updates</h2>
 		<div class="update-blocks">
 			<div class="update-block">
-				<h2>Alpha 1.0</h2>
+				<h2>Alpha 1.1</h2>
+				<div class="details">
+					<div class="detail">
+						<i class="fa fa-calendar"></i>
+						<span> 8 November 2017</span>
+					</div>
+				</div>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
 				</p>
 			</div>
 			<div class="update-block">
 				<h2>Alpha 1.0</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+				<div class="details">
+					<div class="detail">
+						<i class="fa fa-calendar"></i>
+						<span> 20 September 2017</span>
+					</div>
+				</div>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
 				</p>
 			</div>
 		</div>
@@ -50,9 +64,79 @@
 </section>
 <section class="team">
 	<div class="team-inner">
-		<i class="fa fa-user fa-5x game-icon"> </i>
+		<i class="fa fa-user-o fa-5x game-icon"> </i>
 		<h2>Our Team</h2>
+		<div class="team-blocks">
+			<!--- Adam---->
+			<div class="team-block">
+				<div class="team-block-image image-adam">
+				</div>
+				<div class="team-block-info">
+					<div class="info-inner">
+						<h3>Adam Romyn</h3>
+						<p>Networking / Website / AI</p>
+					</div>
+				</div>
+			</div>
+
+			<!--- Dave---->
+			<div class="team-block">
+				<div class="team-block-image image-dave">
+				</div>
+				<div class="team-block-info">
+					<div class="info-inner">
+						<h3>Dave Jones</h3>
+						<p>Map / AI / Game Modes</p>
+					</div>
+				</div>
+			</div>
+			<!--- Eli---->
+			<div class="team-block">
+				<div class="team-block-image image-eli">
+				</div>
+				<div class="team-block-info blue">
+					<div class="info-inner">
+						<h3>Elijah Roussos</h3>
+						<p>Networking / Team Manager / Docs</p>
+					</div>
+				</div>
+			</div>
+
+			<!--- Liam---->
+			<div class="team-block">
+				<div class="team-block-image image-liam">
+				</div>
+				<div class="team-block-info blue">
+					<div class="info-inner">
+						<h3>Liam Byren</h3>
+						<p>Animation / Character Abilities / UI</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+</section>
+<section class="contact">
+	<div class="contact-inner">
+
+		<i class="fa fa-envelope-open-o fa-5x game-icon"> </i>
+		<h2>Contact us</h2>
+		<form>
+			<div class="form-group">
+				<input placeholder="Name"/>
+			</div>
+			<div class="form-group">
+				<input placeholder="Email"/>
+			</div>
+			<div class="form-group">
+				<input placeholder="Phone Number"/>
+			</div>
+			<div class="form-group">
+				<textarea placeholder="Message"></textarea>
+			</div>
+			<button type="submit">Submit</button>
+		</form>
+		</div
 </section>
 </body>
 </html>
