finished the contact section, the download section and added the footer html elements

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css"
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" />
+	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css" />
+	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
 <header class="header-main">
@@ -27,7 +29,8 @@
 	<div class="about-inner">
 		<i class="fa fa-gamepad fa-5x game-icon"> </i>
 		<h2>About Riposte</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+		<p>Riposte is a fast-paced top-down battle arena focused on competitive PvP combat. The game aims to emulate the exciting team fights and battles from games like DOTA and League of Legends without being bound by long game times.
+		</br> </br> Riposte achieves this by stripping away the long periods of farming and the complex item builds and adding in more action-based game modes. Thus, making the game feel faster with a smaller learning curve while still maintain the same high skill cap. Characters will have simple low-cooldown abilities, low hit points and there will be no extra or purchasable items.
 		</p>
 	</div>
 </section>
@@ -136,7 +139,56 @@
 			</div>
 			<button type="submit">Submit</button>
 		</form>
-		</div
+	</div>
 </section>
+<section class="downloads">
+	<div class="downloads-inner">
+		<div class="windows-downloads">
+				<i class="fa fa-windows fa-3x game-icon"> </i>
+				<h2>Download for Windows</h2>
+				<a href="downloads/Riposte.exe.zip" download>
+					<div class="download-btn">
+						Riposte.zip
+					</div>
+				</a>
+				<a href="downloads/Riposte.exe" download>
+					<div class="download-btn">
+						Riposte.exe
+					</div>
+				</a>
+		</div>
+		<div class="ios-downloads">
+			<i class="fa fa-apple fa-3x game-icon"> </i>
+			<h2>Download for IOS</h2>
+			<a href="downloads/Riposte.dmg.zip" download>
+				<div class="download-btn">
+					Riposte.zip
+				</div>
+			</a>
+			<a href="downloads/Riposte.dmg" download>
+				<div class="download-btn">
+					Riposte.dmg
+				</div>
+			</a>
+		</div>
+		<div class="linux-downloads">
+			<i class="fa fa-linux fa-3x game-icon"> </i>
+			<h2>Download for Linux</h2>
+			<a href="downloads/Riposte.deb.zip" download>
+				<div class="download-btn">
+					Riposte.zip
+				</div>
+			</a>
+			<a href="downloads/Riposte.deb" download>
+				<div class="download-btn">
+					Riposte.deb
+				</div>
+			</a>
+		</div>
+	</div>
+</section>
+<footer class="footer">
+
+</footer>
 </body>
 </html>
