--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--===================================Fonts====================================-->
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+	<!--===================================Style Sheets=============================-->
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css" />
+	<!--===================================javascript===============================-->
 	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
+		<!--===================================Header Section with Menu===============================-->
 <header class="header-main">
 	<nav class="menu">
 		<div class="menu-inner">
 			<div class="menu-wrapper">
-				<img class="menu-logo" src="img/logo.png" />
+				<div class="logo-wrapper">
+					<img class="menu-logo" src="img/logo.png" />
+				</div>
 				<ul class=menu-items>
-					<li class="menu-item">About</li>
-					<li class="menu-item">Updates</li>
-					<li class="menu-item">Contact</li>
-					<li class="menu-item">Team</li>
+
 					<li class="menu-item">Download</li>
+					<li class="menu-item">Team</li>
+					<li class="menu-item">Contact</li>
+					<li class="menu-item">Updates</li>
+					<li class="menu-item">About</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 </header>
 <div class="skew-line sk1"></div>
+	<!--===================================About===============================-->
 <section class="about">
 	<div class="about-inner">
 		<i class="fa fa-gamepad fa-5x game-icon"> </i>
@@ -35,6 +44,7 @@
 	</div>
 </section>
 <div class="skew-line sk2"></div>
+	<!--===================================Updates===============================-->
 <section class="updates">
 	<div class="updates-inner">
 		<i class="fa fa-newspaper-o fa-5x game-icon"> </i>
@@ -65,6 +75,7 @@
 		</div>
 	</div>
 </section>
+	<!--===================================Team===============================-->
 <section class="team">
 	<div class="team-inner">
 		<i class="fa fa-user-o fa-5x game-icon"> </i>
@@ -119,6 +130,7 @@
 		</div>
 	</div>
 </section>
+	<!--===================================Contact us===============================-->
 <section class="contact">
 	<div class="contact-inner">
 
@@ -141,6 +153,7 @@
 		</form>
 	</div>
 </section>
+	<!--===================================Downloads===============================-->
 <section class="downloads">
 	<div class="downloads-inner">
 		<div class="windows-downloads">
@@ -187,8 +200,11 @@
 		</div>
 	</div>
 </section>
+	<!--===================================Footer===============================-->
 <footer class="footer">
-
+	<div class="footer-inner">
+ 	© Riposte <span id="year"></span>. All rights reserved.
+	</div>
 </footer>
 </body>
 </html>
