--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 	<!--===================================Style Sheets=============================-->
 	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/animate.css" />
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css" />
 	<!--===================================javascript===============================-->
 	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
@@ -19,6 +20,9 @@
 			<div class="menu-wrapper">
 				<div class="logo-wrapper">
 					<img class="menu-logo" src="img/logo.png" />
+				</div>
+				<div class="hamburger-icon">
+					<i class="fa fa-3x fa-navicon" ></i>
 				</div>
 				<ul class=menu-items>
 
