--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<h2>Our Team</h2>
 		<div class="team-blocks">
 			<!--- Adam---->
-			<div class="team-block">
+			<div class="team-block fadeInLeft animated">
 				<div class="team-block-image image-adam">
 				</div>
 				<div class="team-block-info">
@@ -98,7 +98,7 @@
 			</div>
 
 			<!--- Dave---->
-			<div class="team-block">
+			<div class="team-block fadeInRight animated">
 				<div class="team-block-image image-dave">
 				</div>
 				<div class="team-block-info">
@@ -109,7 +109,7 @@
 				</div>
 			</div>
 			<!--- Eli---->
-			<div class="team-block">
+			<div class="team-block fadeInLeft animated">
 				<div class="team-block-image image-eli">
 				</div>
 				<div class="team-block-info blue">
@@ -121,7 +121,7 @@
 			</div>
 
 			<!--- Liam---->
-			<div class="team-block">
+			<div class="team-block fadeInRight animated">
 				<div class="team-block-image image-liam">
 				</div>
 				<div class="team-block-info blue">
