--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 	<!--===================================Fonts====================================-->
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+	<!--===================================FavIcon====================================-->
+	<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon//apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon//apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon//apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon//apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon//apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon//apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon//apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon//apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="img/favicon//android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon//favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon//favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon//favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 	<!--===================================Style Sheets=============================-->
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/animate.css" />
@@ -11,6 +29,8 @@
 	<!--===================================javascript===============================-->
 	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
+
+	<title>Riposte</title>
 </head>
 <body>
 		<!--===================================Header Section with Menu===============================-->
@@ -22,7 +42,7 @@
 					<img class="menu-logo" src="img/logo.png" />
 				</div>
 				<div class="hamburger-icon">
-					<i class="fa fa-3x fa-navicon" ></i>
+					<i class="fa fa-2x fa-navicon" ></i>
 				</div>
 				<ul class=menu-items>
 
