auto scroll and responsive menu

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 				</div>
 				<ul class=menu-items>
 
-					<li class="menu-item">Download</li>
-					<li class="menu-item">Team</li>
-					<li class="menu-item">Contact</li>
-					<li class="menu-item">Updates</li>
-					<li class="menu-item">About</li>
+					<a href="#download"><li class="menu-item">Download</li></a>
+					<a href="#team"><li class="menu-item">Team</li></a>
+					<a href="#contact"><li class="menu-item">Contact</li></a>
+					<a href="#updates"><li class="menu-item">Updates</li></a>
+					<a href="#about"><li class="menu-item">About</li></a>
 				</ul>
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 </header>
 <div class="skew-line sk1"></div>
 	<!--===================================About===============================-->
-<section class="about">
+<section id="about" class="about">
 	<div class="about-inner">
 		<i class="fa fa-gamepad fa-5x game-icon"> </i>
 		<h2>About Riposte</h2>
@@ -69,7 +69,7 @@
 </section>
 <div class="skew-line sk2"></div>
 	<!--===================================Updates===============================-->
-<section class="updates">
+<section id="updates" class="updates">
 	<div class="updates-inner">
 		<i class="fa fa-newspaper-o fa-5x game-icon"> </i>
 		<h2>Latest Updates</h2>
@@ -100,7 +100,7 @@
 	</div>
 </section>
 	<!--===================================Team===============================-->
-<section class="team">
+<section id="team" class="team">
 	<div class="team-inner">
 		<i class="fa fa-user-o fa-5x game-icon"> </i>
 		<h2>Our Team</h2>
@@ -155,7 +155,7 @@
 	</div>
 </section>
 	<!--===================================Contact us===============================-->
-<section class="contact">
+<section id="contact" class="contact">
 	<div class="contact-inner">
 
 		<i class="fa fa-envelope-open-o fa-5x game-icon"> </i>
@@ -178,25 +178,25 @@
 	</div>
 </section>
 	<!--===================================Downloads===============================-->
-<section class="downloads">
+<section id="download" class="downloads">
 	<div class="downloads-inner">
 		<div class="windows-downloads">
 				<i class="fa fa-windows fa-3x game-icon"> </i>
 				<h2>Download for Windows</h2>
 				<a href="downloads/Riposte.exe.zip" download>
 					<div class="download-btn">
-						Riposte.zip
+						Riposte.exe (64-BIT)
 					</div>
 				</a>
 				<a href="downloads/Riposte.exe" download>
 					<div class="download-btn">
-						Riposte.exe
+						Riposte.exe (32-BIT)
 					</div>
 				</a>
 		</div>
 		<div class="ios-downloads">
 			<i class="fa fa-apple fa-3x game-icon"> </i>
-			<h2>Download for IOS</h2>
+			<h2>Download for macOS</h2>
 			<a href="downloads/Riposte.dmg.zip" download>
 				<div class="download-btn">
 					Riposte.zip
