--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 					<img class="menu-logo" src="img/logo.png" />
 				</div>
 				<div class="hamburger-icon">
-					<i class="fa fa-2x fa-navicon" ></i>
+				  <div class="bar1"></div>
+				  <div class="bar2"></div>
+				  <div class="bar3"></div>
 				</div>
 				<ul class=menu-items>
 
