Added gameplay trailer

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 					<a href="#download"><li class="menu-item">Download</li></a>
 					<a href="#team"><li class="menu-item">Team</li></a>
 					<a href="#contact"><li class="menu-item">Contact</li></a>
+					<a href="#gameplay"><li class="menu-item">Gameplay</li></a>
 					<a href="#updates"><li class="menu-item">Updates</li></a>
 					<a href="#about"><li class="menu-item">About</li></a>
 				</ul>
@@ -62,7 +63,7 @@
 	<!--===================================About===============================-->
 <section id="about" class="about">
 	<div class="about-inner">
-		<i class="fa fa-gamepad fa-5x game-icon"> </i>
+		<i class="fa fa-info-circle fa-5x game-icon"> </i>
 		<h2>About Riposte</h2>
 		<p>Riposte is a fast-paced top-down battle arena focused on competitive PvP combat. The game aims to emulate the exciting team fights and battles from games like DOTA and League of Legends without being bound by long game times.
 		</br> </br> Riposte achieves this by stripping away the long periods of farming and the complex item builds and adding in more action-based game modes. Thus, making the game feel faster with a smaller learning curve while still maintain the same high skill cap. Characters will have simple low-cooldown abilities, low hit points and there will be no extra or purchasable items.
@@ -101,6 +102,19 @@
 		</div>
 	</div>
 </section>
+
+
+<section id="gameplay" class="gameplay">
+	<div class="overlay">
+	<i class="fa fa-gamepad fa-5x game-icon"> </i>
+		<h2>Gameplay</h2>
+	</div>
+	<video width="100%" height="auto" autoplay="autoplay" loop>
+  <source src="video/gameplay_placeholder.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
+</section>
+
 	<!--===================================Team===============================-->
 <section id="team" class="team">
 	<div class="team-inner">
@@ -108,10 +122,10 @@
 		<h2>Our Team</h2>
 		<div class="team-blocks">
 			<!--- Adam---->
-			<div class="team-block fadeInLeft animated">
-				<div class="team-block-image image-adam">
+			<div class="team-block">
+				<div class="team-block-image image-adam fadeInLeft animated">
 				</div>
-				<div class="team-block-info">
+				<div class="team-block-info fadeInLeft animated">
 					<div class="info-inner">
 						<h3>Adam Romyn</h3>
 						<p>Networking / Website / AI</p>
@@ -120,10 +134,10 @@
 			</div>
 
 			<!--- Dave---->
-			<div class="team-block fadeInRight animated">
-				<div class="team-block-image image-dave">
+			<div class="team-block">
+				<div class="team-block-image image-dave fadeInRight animated">
 				</div>
-				<div class="team-block-info">
+				<div class="team-block-info fadeInRight animated">
 					<div class="info-inner">
 						<h3>Dave Jones</h3>
 						<p>Map / AI / Game Modes</p>
@@ -131,8 +145,8 @@
 				</div>
 			</div>
 			<!--- Eli---->
-			<div class="team-block fadeInLeft animated">
-				<div class="team-block-image image-eli">
+			<div class="team-block">
+				<div class="team-block-image image-eli fadeInLeft animated">
 				</div>
 				<div class="team-block-info blue">
 					<div class="info-inner">
@@ -143,11 +157,11 @@
 			</div>
 
 			<!--- Liam---->
-			<div class="team-block fadeInRight animated">
-				<div class="team-block-image image-liam">
+			<div class="team-block">
+				<div class="team-block-image image-liam fadeInRight animated">
 				</div>
-				<div class="team-block-info blue">
-					<div class="info-inner">
+				<div class="team-block-info blue fadeInLeft animated">
+					<div class="info-inner fadeInRight animated">
 						<h3>Liam Byren</h3>
 						<p>Animation / Character Abilities / UI</p>
 					</div>
