Added website text + new eli and video settings

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 	<div class="about-inner">
 		<i class="fa fa-info-circle fa-5x game-icon"> </i>
 		<h2>About Riposte</h2>
-		<p>Riposte is a fast-paced top-down battle arena focused on competitive PvP combat. The game aims to emulate the exciting team fights and battles from games like DOTA and League of Legends without being bound by long game times.
-		</br> </br> Riposte achieves this by stripping away the long periods of farming and the complex item builds and adding in more action-based game modes. Thus, making the game feel faster with a smaller learning curve while still maintain the same high skill cap. Characters will have simple low-cooldown abilities, low hit points and there will be no extra or purchasable items.
+		<p>Riposte is a fast-paced top-down battle arena focused on competitive PvP combat. </br>
+			Riposte emulates the exciting team fights and battles from games like DOTA and League of Legends without being bound by long game times or excessive number of items and abilites.
+		</br> </br> Riposte achieves this by stripping away the long periods of farming and the complex item builds and adding in more action-based game modes thus, making the game feel faster. With a smaller learning curve yet the same high skill cap. Riposte is ideal for MOBA fans looking for a light-weight yet engaging experience.
 		</p>
 	</div>
 </section>
@@ -78,14 +79,29 @@
 		<h2>Latest Updates</h2>
 		<div class="update-blocks">
 			<div class="update-block">
-				<h2>Alpha 1.1</h2>
+				<h2>Alpha 2.0</h2>
 				<div class="details">
 					<div class="detail">
 						<i class="fa fa-calendar"></i>
 						<span> 8 November 2017</span>
 					</div>
 				</div>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+				<p>This Alpha contains all the base content of Riposte, fully realized with up to 5v5 combat. </br> </br> We are excited to announce that we have finally implemented multiplayer into Riposte. Players can now Create or Join lobbies with up to 9 other friends and battle it out in Best of Five Team Deathmatch. Fans of singleplayer can now enjoy a more intelligent AI and can also select the number of AI they wish to fight with/against.
+				</br> </br> An all new soundtrack and remastered sound effects help increase immersion and put you right into the action. There has also been a complete overhaul of the UI and game menu to provide a much more polished experince. Players can also now enable Quick Cast, Mouse Acceleration and adjust Volume Settings.
+			</br> </br> Stay tuned for various bug fixes and the announcements of new characters and game modes.
+				</p>
+			</div>
+		</div>
+		<div class="update-blocks">
+			<div class="update-block">
+				<h2>Alpha 1.1</h2>
+				<div class="details">
+					<div class="detail">
+						<i class="fa fa-calendar"></i>
+						<span> 19 October 2017</span>
+					</div>
+				</div>
+				<p>This improvement on Alpha 1.0 contained 80% of the base content for Riposte </br></br> New Sound Effects, Music,  Particle Effects and a new Map Redesign help bring this build to life. Players now have the use of the new Reflect Ability to deflect oncoming projecticles. </br> </br> Players now have the opportunity to go head-to-head against an intelligent AI which seeks out and enganges players.
 				</p>
 			</div>
 			<div class="update-block">
@@ -93,10 +109,10 @@
 				<div class="details">
 					<div class="detail">
 						<i class="fa fa-calendar"></i>
-						<span> 20 September 2017</span>
+						<span> 15 September 2017</span>
 					</div>
 				</div>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+				<p>This Alpha was a successful proof of concept demo for Riposte. </br></br> This build contains the central mechanics of the game and the handcrafted Battle Arena. Currently players can move around the arena with the character being able to navigate around objects by itself. Players could use the Blink, Shoot and Melee abilites complete with animations and particle effects.
 				</p>
 			</div>
 		</div>
@@ -109,7 +125,7 @@
 	<i class="fa fa-gamepad fa-5x game-icon"> </i>
 		<h2>Gameplay</h2>
 	</div>
-	<video width="100%" height="auto" autoplay="autoplay" loop>
+	<video width="100%" height="auto" controls>
   <source src="video/gameplay_placeholder.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
