website finished just needs builds now

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<a href="#download"><li class="menu-item">Download</li></a>
 					<a href="#team"><li class="menu-item">Team</li></a>
 					<a href="#contact"><li class="menu-item">Contact</li></a>
-					<a href="#gameplay"><li class="menu-item">Gameplay</li></a>
+					<a href="#gameplay"><li class="menu-item">Media</li></a>
 					<a href="#updates"><li class="menu-item">Updates</li></a>
 					<a href="#about"><li class="menu-item">About</li></a>
 				</ul>
@@ -123,12 +123,68 @@
 <section id="gameplay" class="gameplay">
 	<div class="overlay">
 	<i class="fa fa-gamepad fa-5x game-icon"> </i>
-		<h2>Gameplay</h2>
+		<h2>Media</h2>
 	</div>
 	<video width="100%" height="auto" controls>
   <source src="video/gameplay_placeholder.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
+</section>
+
+<section id="media" class="media">
+	<div class="media-inner">
+		<!--===================Media Block=======================-->
+		<div class="media-box">
+			<div class="info">
+			<h2>HUD Design</h2>
+			<p>This image shows off the new HUD design which has four abilities and are all part of the light character (blink, shoot, melee, deflect).
+			<br />
+			<br />
+				The score, timer and player colours are all displayed at the top. Down on the bottom right there is a mini map to locate yourself and other players.
+
+			</p>
+			</div>
+			<div class="m-image">
+				<img src="img/Gameplayer1.png" class="media-image" />
+			</div>
+		</div>
+		<!--===================Media Block=======================-->
+		<div class="media-box">
+			<div class="info">
+			<h2>Animations</h2>
+			<p>The beautiful shield (reflect) animation can been seen in green and there are 3 more to go with it.
+				<br />
+				<br /> A lot of time was spent perfecting the other three animations for blink (teleport), melee (sword swipe) and the shoot (fireball) abilities. </p>
+			</div>
+			<div class="m-image">
+				<img src="img/Gameplay2.png" class="media-image" />
+			</div>
+		</div>
+		<!--===================Media Block=======================-->
+		<div class="media-box">
+			<div class="info">
+			<h2>Main Menu</h2>
+			<p>This awesome display of the cyborg performing a sword swipe shows of the sleek and elegent menu design. <br />
+			<br /> Although you cannot see it, the menu also has amazing animation rotations to new menu panels that transition on button clicks.</p>
+			</div>
+			<div class="m-image">
+				<img src="img/MainMenu.png" class="media-image" />
+			</div>
+		</div>
+		<!--===================Media Block=======================-->
+		<div class="media-box">
+			<div class="info">
+			<h2>Settings</h2>
+			<p>We have started out by implenting basic, yet crucial settings that players can edit through the main menu. <br /></br />
+				Sound volume, quick casting of abilities and screen acceleration can all be set in this menu panel.
+			</p>
+			</div>
+			<div class="m-image">
+				<img src="img/Settings.png" class="media-image" />
+			</div>
+		</div>
+
+	</div>
 </section>
 
 	<!--===================================Team===============================-->
