Added the downloads and modified the downloads

--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
 				<h2>Download for Windows</h2>
 				<a href="downloads/Riposte.exe.zip" download>
 					<div class="download-btn">
-						Riposte.exe (64-BIT)
+						Riposte.exe.zip
 					</div>
 				</a>
-				<a href="downloads/Riposte.exe" download>
+				<a href="downloads/Riposte.exe.zip" download>
 					<div class="download-btn">
-						Riposte.exe (32-BIT)
+						Riposte.exe (64-BIT)
 					</div>
 				</a>
 		</div>
@@ -287,10 +287,10 @@
 			<h2>Download for macOS</h2>
 			<a href="downloads/Riposte.dmg.zip" download>
 				<div class="download-btn">
-					Riposte.zip
+					Riposte.dmg.zip
 				</div>
 			</a>
-			<a href="downloads/Riposte.dmg" download>
+			<a href="downloads/Riposte.dmg.zip" download>
 				<div class="download-btn">
 					Riposte.dmg
 				</div>
